Fix iceberg not appearing issue * Replaced png with svg * Added iceberg graphic behind find on Searching page and formatted text

--- a/src/styles/Terminal.scss
+++ b/src/styles/Terminal.scss
@@ -1,15 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 .terminal {
-  background-color: #dfedf8;
+  background-color: black;
   color: white;
   display: flex;
   flex-direction: column;
   font-family: 'Fira Code', sans-serif;
+  font-size: 1rem;
   height: 100%;
   margin: 5vh auto;
-  padding: 2vh;
+  padding: 2%;
+  position: relative;
+  text-align: left;
   width: 80%;
+  z-index: 1;
 }
 
 .command {
@@ -23,15 +27,6 @@
   padding: 0;
   vertical-align: middle;
   width: 100%;
-}
-
-.terminal {
-  background-color: #dfedf8;
-  color: white;
-  font-family: monospace;
-  padding: 45px;
-  position: relative;
-  text-align: left;
 }
 
 .input-container {
@@ -79,4 +74,3 @@
   flex-direction: column;
   // padding: 20px;
 }
-
