--- a/src/styles/piping.scss
+++ b/src/styles/piping.scss
@@ -33,7 +33,7 @@
 }
 
 .content-box {
-  background: #E0EDF8;
+  background: #e0edf8;
   font-weight: 400;
   margin: 2% 4%;
   padding: 2%;
@@ -99,7 +99,7 @@
   width: 100%;
 }
 
-.terminal-container{
+.terminal-container {
   height: 100px;
   height: 225px;
   // margin-left: 50px;
